# stable-diffusion-webui

./: .eslintrc.js  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml  requirements_versions.txt  webui-macos-env.sh  webui-user-network.sh  webui-user-no-gpu.bat  webui-user.bat  webui-user.sh  webui.sh
admin-tools/sd-webui-manager/: .gitignore  build.bat  build.sh  package-lock.json  package.json
admin-tools/sd-webui-manager/src/: app.js  index.html  styles.css
admin-tools/sd-webui-manager/src-tauri/: Cargo.toml  tauri.conf.json
admin-tools/sd-webui-manager/src-tauri/capabilities/: default.json
admin-tools/sd-webui-manager/src-tauri/icons/: icon.icns
admin-tools/sd-webui-manager/src-tauri/src/: api_server.rs  cli.rs  commands.rs  config.rs  main.rs  server.rs
docs/: CLIP_INSTALLATION_FIX.md  DEPENDENCY_AUDIT.md  ROCM_COMPATIBILITY_REVIEW.md
modules/: launch_utils.py
wiki/: Command-Line-Arguments-and-Settings.md  Contributing.md  Custom-Images-Filename-Name-and-Subdirectory.md  Features.md  Install-and-Run-on-NVidia-GPUs.md  Installation-on-Apple-Silicon.md
