[package]
name = "sd-webui-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
dirs = "6"
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
